--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "yarn lint:path .",
     "lint:path": "eslint --ignore-path .gitignore --max-warnings 0",
     "test": "tsc -b && wsrun -ms test",
-    "coverage": "nyc yarn test"
+    "coverage": "nyc yarn test",
+    "version": "1.9.0"
   },
   "devDependencies": {
     "@openzeppelin/docs-utils": "^0.1.0",
