--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "openzeppelin-upgrades",
+  "version": "1.9.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -9,8 +10,7 @@
     "lint": "yarn lint:path .",
     "lint:path": "eslint --ignore-path .gitignore --max-warnings 0",
     "test": "tsc -b && wsrun -ms test",
-    "coverage": "nyc yarn test",
-    "version": "1.9.0"
+    "coverage": "nyc yarn test"
   },
   "devDependencies": {
     "@openzeppelin/docs-utils": "^0.1.0",
